eww added 2 more bubbles

--- a/nix/home/eww/eww.scss
+++ b/nix/home/eww/eww.scss
@@ -7,7 +7,13 @@ button, eventbox {
     margin: 0;
   }
   
-  /* Main bubble styling */
+
+  window {
+    background: transparent;
+    border: none;
+  }
+  
+
   .bubble {
     background-color: #181926;
     color: #ee99a0;
@@ -17,14 +23,17 @@ button, eventbox {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
   }
   
-  /* Text inside the time widget */
+
   .time label {
     font-family: "JetBrains Mono Light";
     color: #ee99a0;
     font-size: 1.1rem;
   }
-  window {
-    background: transparent;
-    border: none;
+  
+
+  label {
+    font-family: "JetBrains Mono Light";
+    color: #ee99a0;
+    font-size: 1.1rem;
   }
   
